# BeagleBoneTCPSocket

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Convolution.h  FFT.h  ImageIdentification.h  Message.h  SharedMemClient.h
src/: CMakeLists.txt  Client.c  Convolution.c  FFT.c  ImageIdentification.c  SharedMemClient.c  main.c
